# Linal_Spaceship

./: .gitignore  CMakeLists.txt
Linal_Spaceship/: CMakeLists.txt  Linal_Spaceship.cpp  Linal_Spaceship.h
Linal_test/: Linal_test.vcxproj  test.cpp
Linal_test/Debug/: Linal_test.exe.recipe
Linal_test/Debug/Linal_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Linal_test.lastbuildstate
linal/: CMakeLists.txt
linal/include/: App.hpp  Bullet.hpp  Camera.hpp  DrawableObject.hpp  GameObject.hpp  PulsatingObject.hpp  Renderer.hpp  Ship.hpp  Transform.hpp  Vector.hpp  Vector3.hpp  Vector4.hpp
linal/src/: App.cpp  Bullet.cpp  Camera.cpp  DrawableObject.cpp  GameObject.cpp  PulsatingObject.cpp  Renderer.cpp  Ship.cpp  Unit_Tests.cc
linal/src/math/: Transform.cpp  Vector.cpp  Vector4.cpp
